# quartz_icelake

./: .gitignore  CMakeLists.txt  generate_bash.py  generate_bash_CXL.py  nvmemul-orig.ini  nvmemul.ini  test_latency  test_latency.cpp  test_thread.txt
FULL-RESULTS-test/: foo-runs  foo-runs-test
benchmark-tests/: foo  memlat-bench-test-10M-single-socket.sh  nvmemul-orig.ini  nvmemul.ini
benchmark-tests/FULL-RESULTS-test/: foo-runs  full_results-1000-10000-1.txt  full_results-200-10000-1.txt  full_results-300-10000-1.txt  full_results-400-10000-1.txt  full_results-500-10000-1.txt  full_results-600-10000-1.txt  full_results-700-10000-1.txt  full_results-800-10000-1.txt  full_results-900-10000-1.txt  full_results-local-200-10000-1.txt  full_results-local-300-10000-1.txt  results-1000-10000-1.txt  results-200-10000-1.txt  results-300-10000-1.txt  results-400-10000-1.txt  results-500-10000-1.txt  results-600-10000-1.txt  results-700-10000-1.txt  results-800-10000-1.txt  results-900-10000-1.txt  results-local-200-10000-1.txt
benchmark-tests/ORIG-lat-test/: final-hw-latency.txt  list-hw-latency.txt
benchmark-tests/SUMMARY-RESULTS-test/: summary-nvm-lat-accuracy-epoch-10000-numchains-1.txt  summary-nvm-lat-accuracy-local-epoch-10000-numchains-1.txt
scripts/: foo
scripts/FULL-RESULTS-test/: foo-runs-test
src/lib/: CMakeLists.txt  pmalloc.c  process_rank.c  topology.c
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_dev.cc  test_interpose  test_interpose.cc  test_multithread.c  test_mutex.cc  test_nvm  test_nvm_remote_dram  test_thread.cc
(+6 files in other folders)
